[gd_scene load_steps=3 format=3 uid="uid://b8i64xgywab5v"]

[ext_resource type="Script" path="res://Main.gd" id="1_q8pv2"]
[ext_resource type="Theme" uid="uid://cmksimtjge5ue" path="res://bahnschrift.tres" id="2_vgsuf"]

[node name="Main" type="Node2D"]
script = ExtResource("1_q8pv2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 640.0
offset_bottom = 360.0

[node name="InfoCon" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogCon" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="VBoxContainer/LogCon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("2_vgsuf")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonCon" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewGameBut" type="Button" parent="VBoxContainer/ButtonCon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_vgsuf")
text = "New Game"

[node name="RollBut" type="Button" parent="VBoxContainer/ButtonCon"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vgsuf")
text = "Roll"

[node name="QuitBut" type="Button" parent="VBoxContainer/ButtonCon"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vgsuf")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ButtonCon/NewGameBut" to="." method="_on_new_game_but_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCon/RollBut" to="." method="_on_roll_but_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCon/QuitBut" to="." method="_on_quit_but_pressed"]
